Styles/style.css
/** Grid system - https://www.w3schools.com/css/css_rwd_grid.asp **/
* {
    /* box-sizing: border-box; */
    color: antiquewhite;
}

/* Selectors */
  
html {
    font-family: "Comic Sans MS", "sans-serif";
    font-size: 1.3rem;
    cursor: url("../Resources/cursors/RawFish-small.png") 2 2, auto;
}

a:hover, button:hover, input:hover {
    cursor: url("../Resources/cursors/RawFishPointer-small.png") 8 2, auto;
}

#hamburger-menu {
    width: 100% !important;
}

ul.nav {
    width: 100%;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: rgb(13, 28, 46);
}

ul.nav li {
    display: block;
    float: none;
    text-align: center;
    width: 100%;
}

ul.nav li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

/* Change the link color to #111 (black) on hover */
ul.nav li a:hover {
    background-color: #204458;
}

.hiddenOnMobile {
    display: none !important;
}

@media only screen and (min-width: 1024px) {
    ul.nav li {
        width: 16.6%;
        float: left;
        display: block;
    }

    .hiddenOnMobile {
        display: inherit !important;
    }

    #hamburger-menu {
        display: none;
    }

    .dropdown-content {
        position: absolute;
        max-width: 350px;
        min-width: 10em;
    }
}

@media only screen and (min-width: 1440px) {
    .dropdown-content {
        min-width: 15em;
    }
}

/* For mobile phones: */
[class*="col-"] {
    width: 100%;
}

@media only screen and (min-width: 768px) {

    /* For desktop: */
    .col-1 {
        width: 8.33%;
    }

    .col-2 {
        width: 16.66%;
    }

    .col-3 {
        width: 25%;
    }

    .col-4 {
        width: 33.33%;
    }

    .col-5 {
        width: 41.66%;
    }

    .col-6 {
        width: 50%;
    }

    .col-7 {
        width: 58.33%;
    }

    .col-8 {
        width: 66.66%;
    }

    .col-9 {
        width: 75%;
    }

    .col-10 {
        width: 83.33%;
    }

    .col-11 {
        width: 91.66%;
    }

    .col-12 {
        width: 100%;
    }
}

[class*="col-"] {
    float: left;
    padding: 15px;
}

.row::after {
    content: "";
    clear: both;
    display: table;
}

/** Image - https://www.w3schools.com/css/css_rwd_grid.asp **/
img {
    max-width: 100%;
    height: auto;
}

/** Overflow (for tables) - https://www.w3schools.com/howto/howto_css_table_responsive.asp **/
.overflow {
    overflow-x: auto;
}

.title {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 70%;
}

.center {
    text-align: center;
    margin: auto;
    color: white;
}

ul {
    text-align: center;
    list-style-position: inside;
}

ol {
    text-align: center;
    list-style-position: inside;
}

.colorBack {
    background-image: url("../Resources/Images/fishGif.gif");
    /*     background-repeat: no-repeat;
    background-repeat: no-repeat;
 */
    background-size: 100% 1400px;
}

.opaqueMain {
    background-color: #204458c7;
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
    padding: 0.5rem;
}

.obiswan {
    border-color: beige;
    border-style: solid;
}

iframe.homepage {
    width: 60%;
    height: 500px;
}

iframe.homepage {
    margin-top: 1.5rem;
    border-radius: 30px;
    border-style: solid;
    border-width: 15px;
    border-color: antiquewhite;
}

p.homepage {
    text-align: left;
    margin-left: 40px;
    margin-right: 40px;
}

img#profilePicture {
    border-style: solid;
    border-radius: 70px;
    border-width: 10px;
    border-color: antiquewhite;
}

#teamIntro hr {
    width: 50%;
    background-color: antiquewhite;
    border-width: 3px;
    border-radius: 35px;
    border-color: antiquewhite;
    border-style: solid;
}

h1#grossFont{
    font-family: 'Rock 3D', cursive;
}

h3,h4#grossFont{
    font-family: 'Snowburst One', cursive;
}

body#minion{
    background-image: url("https://thumbs.gfycat.com/SnarlingCreativeEnglishsetter-size_restricted.gif");
}

#bodyContent {
    /* background-color: rgba(70, 130, 180, 0.4); */
    margin-top: 1.5rem;
    border-radius: 30px;
    height: auto;
  }

